# Protocognitive_Agents

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh
data/: README.md
data/raw/: meta_data.csv
notebooks/: classification_analysis.ipynb  complexity_analysis.ipynb
scripts/: compute_complexity.py  plot_raw_spikes.py  reproduce_all.py  train_classifier.py  transform_and_plot.py
src/proteinoid_spikes/: __init__.py  classifier.py  complexity.py  config.py  data_loading.py  features.py  plotting.py  transformations.py
